--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
 }
 
 
-
 *{
     font-family: 'Nunito Sans', sans-serif;
     /* Gerais - Resets */
@@ -52,7 +51,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* border: 2px solid red; */
+/*      border: 2px solid red;  */
     align-items: center;
 }
 
@@ -85,17 +84,106 @@
 }
 
 .intro{
-    text-align: center;
+   font-size: 3em;
+   line-height: 1;
+   max-width: 960px;
+   margin: 0 auto;
+   padding: 60px 10px;
 }
 
 .sobre{
-    border: 2px solid red;
-    text-align: center;
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    max-width: 960px;
+    border-top: 2px solid var(--Background-blue-Dark);
+    border-bottom: 2px solid var(--Background-blue-Dark);
+    padding: 60px 0;
 }
 
+.sobre-info{
+    /* define tamanho mínimo de um elemento */
+    min-width: 300px;
+    margin: 0 10px;
+}
 
+.sobre-info h2{
+    font-size: 3em;
+    margin-bottom: .5em;
+}
 
+.sobre-info p{
+    font-size: 1.25em;
+    line-height: 1.4em;
+    margin-bottom: 1em;
+    color:var(--Color-gray-Strong);
+    width: 300px;
+}
 
+.sobre-img{
+    /* flex: 1 1 160px; */
+    min-width: 160px;
+    margin: 0 10px;
+}
+/* produtos */
+.produtos{
+    max-width: 960px;
+    margin: 60px auto;
+}
 
+.produtos h2{
+    font-size: 3em;
+    /* margin: 0 10px 60px; */
+}
 
+.produtos-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
+
+.produtos-item{
+    min-width: 175px;
+    max-width: 300px;
+    margin: 10px;
+}
+
+.produtos-item img{
+    width: 100%;
+}
+
+.produtos-item h2{
+    font-size: 3em;
+    color: var(--Color-gray-Soft);
+    background: var(--Background-Gray-Soft);
+    padding: 60px 20px;
+}
+.purple{
+    border-top: 8px solid var(--Row-purple);
+}
+
+.pink{
+    border-top: 8px solid var(--Row-Pink);
+}
+
+.blue{
+    border-top: 8px solid var(--Row-blue);
+}
+ 
+/* Preços */
+
+.price{
+    background: var(--Background-Gray-Soft);
+    padding: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
+
+.price-item{
+    min-width: 260px;
+    border: 4px solid white;
+    padding: 20px;
+    margin: 10px;
+}
 
